fixed a little layout issue with the reels.

--- a/reel.css
+++ b/reel.css
@@ -1044,7 +1044,7 @@
     border: var(--reel-promo-border) solid #c3ffd5eb;
 
     background-color: #8ef4b621;
-    height: 52.3vh;
+    height: max-content;
   }
 
   .reel-promo__article-content {
